--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "autoprefixer": "^10.4.21",
+    "eslint": "^9.37.0",
+    "eslint-config-next": "^15.5.4",
     "postcss": "^8.5.6",
     "shadcn": "^3.4.0",
     "tailwindcss": "^3.4.18",
