--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
+    "@types/three": "^0.180.0",
     "autoprefixer": "^10.4.21",
     "eslint": "^9.37.0",
     "eslint-config-next": "^15.5.4",
@@ -45,6 +46,7 @@
     "lucide-react": "^0.545.0",
     "motion": "^12.23.22",
     "next": "^15.5.4",
+    "next-themes": "^0.4.6",
     "pino-pretty": "^13.1.1",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
